release: publish TraceHawk v0.10.0 community edition
